--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Hacker theme
-description: Hacker is a theme for GitHub Pages.
+title: "./BUBBLEGUMPOP_MUNA "
+description: My_Name_is_Muna
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-hacker
